@@ -26,7 +26,7 @@
 
 /*
  * Authentication module for ProFTPD
- * $Id: mod_auth.c,v 1.134 2003-02-10 23:34:45 castaglia Exp $
+ * $Id: mod_auth.c,v 1.135 2003-03-03 00:42:12 castaglia Exp $
  */
 
 #ifdef __CYGWIN__
@@ -2532,11 +2532,16 @@ MODRET set_useftpusers(cmd_rec *cmd) {
   return HANDLED(cmd);
 }
 
+/* usage: UserAlias alias real-user */
 MODRET set_useralias(cmd_rec *cmd) {
   config_rec *c = NULL;
 
   CHECK_ARGS(cmd, 2);
   CHECK_CONF(cmd, CONF_ROOT|CONF_VIRTUAL|CONF_GLOBAL|CONF_ANON);
+
+  /* Make sure that the given names differ. */
+  if (strcmp(cmd->argv[1], cmd->argv[2]) == 0)
+    CONF_ERROR(cmd, "alias and real user names must differ");
 
   c = add_config_param_str(cmd->argv[0], 2, cmd->argv[1], cmd->argv[2]);
 
